--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -2,7 +2,7 @@ html
     head 
         style 
             include ../public/css/site.css
-        title Simple spa for get data
+        title Tickets App
     body 
         div(class="content-form")
             input(type="button", id="btnLogin", value="Login") 
